cleanup the main script

--- a/templates/node_admin.html
+++ b/templates/node_admin.html
@@ -35,7 +35,7 @@
                             <option value="{{ '%02X' % key }}">{{ cmd_dict[key] }}</option>
                           {% endif %}
                       {% endfor %}
-                      <option value="FF" id="set_loc">SET LOCATION</option>
+                      <option value="FF" id="set_loc" style="display:none">SET LOCATION</option>
                   </select>
               </div>
 
