--- a/static/css/main.css
+++ b/static/css/main.css
@@ -175,9 +175,8 @@ fieldset {
 
 table {
   border-collapse: collapse;
-  width: 80%;
   align-items: center;
-  float: center;
+  width: 100%;
 }
 
 .scrollable {
@@ -207,7 +206,6 @@ tr:hover {background-color: var(--RED);}
 
 td {
   padding: 1em;
-  width: 25%;
 }
 
 
@@ -225,6 +223,10 @@ td {
 }
 .team5 {
     background-color: #F0F0FF;
+}
+
+.team1, .team2, .team3, .team4, .team5 {
+    padding: 0.5em;
 }
 
 .team1:hover {
