Remove "Ballack" from company logo portions

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 
 <head>
 
-  <title> Ballahack Battlefield </title>
+  <title> Battlefield Gaming Systems </title>
   <meta charset="UTF-8">
   <meta name={{ author }}
         content="Results earned here.">
@@ -15,7 +15,7 @@
 </head>
 
 <header>
-    <bold> Welcome to <br> <em style="font-size:110%; text-transform: uppercase"> Ballahack Battlefield </em> </bold>
+    <bold> <em style="font-size:110%; text-transform: uppercase"> Battlefield Gaming <br> Systems </em> </bold>
 
 </header>
 
@@ -41,7 +41,7 @@
     <footer style="align:center;">
         &copy; Copyright 2019
         <script>new Date().getFullYear()>2019&&document.write("- " + new Date().getFullYear());</script>
-        Ballhack-Battlefield
+        Battlefield Gaming Systems
 
         <br> <br>
 
