Cleanup node_admin with buttons.  Only allow certain buttons when conditions permit.

--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
         </a>
 
         <a href="https://www.youtube.com/channel/UCB74I2EiE5dC0CAeDXbBjfA">
-        <img src="{{ url_for('static', filename='img/ss.jpg') }}"
+        <img src="{{ url_for('static', filename='img/ss.png') }}"
              style="max-width: 15%; padding:2em;"
              align="middle">
         </a>
