--- a/static/css/main.css
+++ b/static/css/main.css
@@ -148,12 +148,10 @@ input {
 
 button, .button {
     transition: all .5s ease-in-out;
-    padding: 1em;
-    border-radius: 0.2em;
-    text-transform: capitalize;
-    width: 100%;
 }
-button:hover, .button:hover {background-color: var(--RED)}
+button:hover, .button:hover, #end_game_button:hover, #discover_network_button:hover {
+    background-color: var(--RED);
+  }
 
 select {
   -webkit-appearance: none;
@@ -329,12 +327,11 @@ table thead tr th {
     justify-content: space-between;
 }
 
-#form_submit_button {
+#form_submit_button, #discover_network_button, #end_game_button {
     border-radius: 0.2em;
     padding: 1em;
     font-size: 2em;
     text-transform: uppercase;
-    vertical-align: center;
     width: 80%;
     background-color: var(--button_color);
     color: #FFFFFF;
