fix value assignment to null selection

--- a/templates/node_admin.html
+++ b/templates/node_admin.html
@@ -42,7 +42,7 @@
 
                       {% else %}
 
-                      <option value="FF" id="set_loc" style="display:none">--select--</option>
+                      <option value="" id="set_loc" style="display:none">--select--</option>
 
                       {% endif %}
 
