cleanup a few function - getting rid of unneeded variable definitions

--- a/templates/node_admin.html
+++ b/templates/node_admin.html
@@ -42,7 +42,7 @@
 
                       {% else %}
 
-                      <option value="" id="set_loc" style="display:none">--select--</option>
+                      <option value="00" id="set_loc" style="display:none">--select--</option>
 
                       {% endif %}
 
@@ -74,8 +74,6 @@
                  {% endif %}>
                  </input>
 
-          <br>
-
           <input class="button"
                  id="end_game_button"
                  type="submit"
@@ -85,8 +83,6 @@
                  style="display:none"
                  {% endif %}>
                  </input>
-
-          <br>
 
           <input class="button"
                  id="discover_network_button"
