Add time held for individual point to leaderboard

--- a/templates/node_admin.html
+++ b/templates/node_admin.html
@@ -42,7 +42,7 @@
 
                       {% else %}
 
-                      <option value="00" id="set_loc" style="display:none">--select--</option>
+                      <option value="00" id="no_nodes" style="display:none">--select--</option>
 
                       {% endif %}
 
