Added the user registration page, still needs a lot of work

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
     <ul id="main-nav">
         <li><a href="/index">Home</a></li>
         <li><a href="/players">Leaderboard</a></li>
+        <li><a href="/user_reg">User Registration</a></li>
         <li><a href="/node_admin">Node Admin</a></li>
         <li><a href="/comms">Comms Log</a></li>
     </ul>
