--- a/templates/user_reg.html
+++ b/templates/user_reg.html
@@ -2,5 +2,22 @@
 
 {% block content %}
 
+    <form id="user registration"
+          name="Member_Data"
+          action="/user_registration"
+          method="post"
+          style="float:center">
 
+      <fieldset id="userfieldset">
+        <label for="fname"> First Name: </label><br>
+        <input type="text" id="fname" name="fname"><br>
+
+        <label for="lname"> Last Name: </label><br>
+        <input type="text" id="lname" name="lname"><br>
+
+        <input type="submit" value="Submit">
+        
+        
+    </form>
+        
 {% endblock %}
