--- a/static/css/main.css
+++ b/static/css/main.css
@@ -49,17 +49,22 @@ header{
 }
 
 
-h1{
-    border-radius: 0.1em;
-    color: rgba(255,255,255,0.70);
+h1, h3{
+    /* border-radius: 0.1em; */
+    color: rgba(255,255,255); /* ,alpha); */
     text-align: center;
-    vertical-align: center;
     background-color: var(--BLACK);
-    font-size: 150%;
     padding: 0.5em;
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
+    text-transform: uppercase;
 }
-h1:hover, header:hover{
+h1 {
+    font-size: 175%;
+}
+h3 {
+    font-size: 125%;
+}
+h1:hover, h3:hover, header:hover{
     color: var(--RED);
 }
 
@@ -121,6 +126,9 @@ h2 {
     padding-right: 0.5%;
 }
 
+/* .leaderboard{
+    border: 1px #800000;
+} */
 
 form {
     padding: 1em;
