This commit adds the ability to get a players first and last name and put it into its own table. It takes all entries from that table and puts it in a select menu which will then be used to select a players name and then link it to a UID

--- a/templates/user_reg.html
+++ b/templates/user_reg.html
@@ -2,22 +2,28 @@
 
 {% block content %}
 
+
+    {% from "_formhelpers.html" import render_field %}
     <form id="user registration"
           name="Member_Data"
-          action="/user_registration"
+          action="/user_reg"
           method="post"
           style="float:center">
 
-      <fieldset id="userfieldset">
-        <label for="fname"> First Name: </label><br>
-        <input type="text" id="fname" name="fname"><br>
-
-        <label for="lname"> Last Name: </label><br>
-        <input type="text" id="lname" name="lname"><br>
+        <dl>
+          {{render_field(form.fname)}}
+          {{render_field(form.lname)}}
+        </dl>
 
         <input type="submit" value="Submit">
         
-        
     </form>
         
+    <select name="Players" id="players">
+        {% for player in Players %}
+        <option value={{player['id']}}>{{player['lname']}},
+        {{player['fname']}}</option>
+        {% endfor %}
+    </select>
+
 {% endblock %}
