--- a/templates/user_reg.html
+++ b/templates/user_reg.html
@@ -2,7 +2,6 @@
 
 {% block content %}
 
-
     {% from "_formhelpers.html" import render_field %}
     <form id="user registration"
           name="Member_Data"
@@ -26,4 +25,6 @@
         {% endfor %}
     </select>
 
+    <button type="button" name="Get UID" formaction="/register_user"> 
+    <!-- put some shit in here about where to put the uid > 
 {% endblock %}
