--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,10 @@
 
     function(){                            //Periodically
 
-    fetch('/index/is_change')
+    fetch('/index/is_change',  {
+                                method: "GET",
+                                cache: "no-cache",
+                               })
         .then(function (response) {
             return response.json();
         }).then(function (data) {
