change JS update to handle SVG elements and add SVG

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,18 +16,35 @@
             return response.json();
         }).then(function (data) {
 
+            console.log(data)
+
             for (var node in data) {
 
-              var ele = document.getElementById("beacon_" + node);
+                var ele = document.getElementById(data[node].id);
 
-              if (data[node].stable){
-                ele.style.border = "1vw dashed " + data[node].color;
-                ele.style.background = data[node].color;
-              }
-              else{
-                ele.style.border = "1vw double " + data[node].color;
-                ele.style.background = "";
-              }
+                console.log("beacon team" + data[node].team)
+
+                ele.setAttribute("class", "beacon");
+
+                // var cls = document.getElementByClassName("team" + data[node].team)
+
+
+                console.log(ele.className)
+
+                if (data[node].stable){
+                    // ele.style.border = "1vw dashed " + data[node].color;
+                    // ele.style.background = data[node].color;
+                    ele.setAttribute("fill", data[node].color);
+                    ele.setAttribute("opacity", "0.5");
+                    ele.setAttribute("class", "owned");
+                }
+                else{
+                    // ele.style.border = "1vw double " + data[node].color;
+                    // ele.style.background = "";
+                    // ele.setAttribute("stroke", data[node].color);
+                    ele.setAttribute("fill", data[node].color);
+                    ele.setAttribute("class", "beacon");
+                }
 
             }
         });
@@ -67,9 +84,16 @@
 
 <div class="grid_element middle">
     <div class="beacon-container">
-      <img src="{{ url_for('static', filename='img/field.png') }}"
-           style="width: 100%; border: 1px solid #000000;"
-           align="middle">
+
+        {% block SVG %}
+        {% endblock %}
+
+      <!-- <img src="{{ url_for('static', filename='img/field.svg') }}"
+           style="width: 100%; border: 0px solid #000000; background:url({{ url_for('static', filename='img/field.png') }}); background-size: cover;"
+           align="middle"
+           opacity="0.2"> -->
+
+
            {% for n in node_status %}
               <div class="beacon" id="beacon_{{n}}"
                    style="border-color:{{team_cmap[node_status[n][1]]}};
