remove more beacon references

--- a/templates/field.html
+++ b/templates/field.html
@@ -62,7 +62,7 @@
      inkscape:label="Bottom">
     <image
        sodipodi:absref="{{ url_for('static', filename='img/field.png') }}"
-       xlink:href="field.png"
+       xlink:href="{{ url_for('static', filename='img/field.png') }}"
        width="618.23999"
        height="923.52002"
        preserveAspectRatio="none"
