--- a/templates/user_reg.html
+++ b/templates/user_reg.html
@@ -35,7 +35,7 @@
            </input>
     <!-- put some shit in here about where to put the uid >
     <!-->
-    <h1 id="uidblock">UID Goes Here</h1>
+    <h1 id="uidblock" value="">UID Goes Here</h1>
 
     <input class="button"
            id="assign_uid_button"
