--- a/templates/user_reg.html
+++ b/templates/user_reg.html
@@ -5,7 +5,7 @@
     {% from "_formhelpers.html" import render_field %}
     <form id="user registration"
           name="Member_Data"
-          action="/user_reg"
+          action=""
           method="post"
           style="float:center">
 
