--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
         <table id="table">
         <thead>
           <tr>
-                <th class="header"> {{team_name[team_i] | safe}} Team ({{team | length}})</th>
+                <th class="header" colspan="3"> {{team_name[team_i] | safe}} Team ({{team | length}})</th>
           </tr>
         </thead>
         <tbody>
@@ -84,7 +84,7 @@
         <table id="table">
         <thead>
           <tr>
-                <th class="header"> {{team_name[team_i] | safe}} Team ({{team | length}})</th>
+              <th class="header" colspan="3"> {{team_name[team_i] | safe}} Team ({{team | length}})</th>
           </tr>
         </thead>
         <tbody>
