only show available node assignemnts based on what is not already assigned - prevent double assignment.

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
     <ul id="main-nav">
         <li><a href="/index">Home</a></li>
         <li><a href="/players">Leaderboard</a></li>
-        <li><a href="/user_reg">User Registration</a></li>
+        <li><a href="/user_reg">Registration</a></li>
         <li><a href="/node_admin">Node Admin</a></li>
         <li><a href="/comms">Comms Log</a></li>
     </ul>
@@ -32,7 +32,7 @@
 <br>
 
 <body>
-  <h2> We manage your stats, so you can get back to things that matter. </h2>
+  <!-- <h2> We manage your stats, so you can get back to things that matter. </h2> -->
 
   {% with messages = get_flashed_messages() %}
     {% if messages %}
