--- a/templates/players.html
+++ b/templates/players.html
@@ -69,7 +69,7 @@
     <tr class="row">
 
             <td> {{ dat['team'] | safe }} </td>
-            <td> {{ dat['time']//60 }} </td>
+            <td> {{ dat['time']//60 if dat['time'] else 0 }} </td>
 
     </tr>
     {% endfor %}
