stop using document.write() for copywrite.

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,8 +49,7 @@
 
 <center>
     <footer style="align:center;">
-        &copy; Copyright 2019
-        <script>new Date().getFullYear()>2019&&document.write("- " + new Date().getFullYear());</script>
+        &copy; Copyright 2019 - 2021
         Battlefield Gaming Systems
 
         <br> <br>
