--- a/templates/players.html
+++ b/templates/players.html
@@ -48,7 +48,7 @@
 
 
 {% for nd in node_times %}
-<h3> {{ nd if nd else node_times[nd][0]['action'] }} </h3>
+<h3> {{ nd if nd else node_times[nd][0]['node'] }} </h3>
 <table id="table">
   <thead>
     <tr>
