--- a/templates/user_reg.html
+++ b/templates/user_reg.html
@@ -19,8 +19,8 @@
 
     <select name="Players" id="players">
         {% for player in Players %}
-        <option value={{  player['id']  }}>{{  player['lname']  }},
-        {{  player['fname']  }}, uid: {{ player['uid'] }}</option>
+        <option value={{  player['id']  }}>{{  player.lname  }},
+        {{  player.fname  }}, uid: {{ player.uid }}</option>
         {% endfor %}
     </select>
 
